fix: hide username on small tablet

--- a/components/common/Header/Header.module.scss
+++ b/components/common/Header/Header.module.scss
@@ -64,7 +64,7 @@
   font-size: 16px;
   line-height: 24px;
 
-  @media (max-width: media.$mobileM) {
+  @media (max-width: media.$tabletS) {
     display: none;
   }
 }
